--- a/health_corner/blog.html
+++ b/health_corner/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blog - Health Corner</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -37,3 +37,7 @@
     <p>Discover what insomnia is, what causes it, how it affects your health, and effective ways to manage and overcome sleepless nights.</p>
       <p><em>Published: May 11, 2025</em></p>
     </article>
+     <script src="script.js"></script>
+     </section>
+     </body>
+     </html>
