--- a/health_corner/index.html
+++ b/health_corner/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Healthy Living Blog - Home</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
@@ -25,7 +25,7 @@
 
     <h3>Latest Blog Posts</h3>
     <ul>
-      <li><a href="post1.html">What is Dehydration</a></li>
+      <li><a href="post1.html">What is Dehydration?</a></li>
       <li><a href="post2.html">Understanding Diabetes, Symptoms, Causes and Treatment</a></li>
       <li><a href="post3.html">Understanding Insomnia: Causes, Effects, and Management</a></li>
      </ul>
@@ -39,6 +39,6 @@
     <p>© 2025 Health Corner Blog</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
