--- a/health_corner/post2.html
+++ b/health_corner/post2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Diabetes</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -116,6 +116,6 @@ Take control of your health today—because small changes can make a big differe
     &copy; 2025 Health Corner Blog
   </footer>
 
-  <script src="js/script.js"></script> </body>
+ <script src="script.js"></script></body>
 </html>
 
