--- a/health_corner/contact.html
+++ b/health_corner/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Living Blog - Contact Us</title>
-    <link rel="stylesheet" href="css/styles.css"> </head>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
     <header>
         <h1>Healthy Living</h1>
@@ -67,5 +67,6 @@
         <p>© 2025 Healthy Living Blog</p>
     </footer>
 
-    <script src="js/script.js"></script> </body>
-</html>
+    <script src="script.js"></script>
+   </body>
+   </html>
