--- a/health_corner/post3.html
+++ b/health_corner/post3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stretching: The Overlooked Key to Fitness</title>
-    <link rel="stylesheet" href="css/styles.css"> </head>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
     <header>
         <h1>Health Corner</h1>
@@ -104,5 +104,5 @@
         <p>© 2025 Healthy Living Blog</p>
     </footer>
 
-    <script src="js/script.js"></script> </body>
+    <script src="script.js"></script> </body>
 </html>
